# aoc2020

./: .gitignore  Cargo.toml  README.md
_src/: lib.rs
day01/: Cargo.toml
day01/src/: main.rs
day02/: Cargo.toml
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/: Cargo.toml
day06/input/: input.txt
day06/src/: main.rs
day07/: Cargo.toml
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/input/: input.txt
day11/src/: main.rs
day12/: Cargo.toml
day12/src/: main.rs
day13/: Cargo.toml
day13/input/: input.txt
day13/src/: main.rs
day14/: Cargo.toml
day14/input/: input.txt
day14/src/: main.rs
day15/: Cargo.toml
day15/src/: main.rs
day16/: Cargo.toml
day16/input/: input.txt
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: main.rs
day18/: Cargo.toml
day18/input/: example2.txt  input.txt
day18/src/: main.rs
day19/: Cargo.toml
day19/input/: input.txt
day19/src/: main.rs
day20/: Cargo.toml
day20/input/: input.txt
day20/src/: main.rs
lib_aoc/: Cargo.toml
lib_aoc/src/: lib.rs
src/: lib.rs
