[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Csatacsirke <battlechicken74@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1"
regex = "1"

[workspace]
members = ["day01", "day02"]

